tests/conformance/parse/invalid/unclosed_string.ks
// EXPECT: Expected expression
val x = "no closing quote
